--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>SwampSnail.Art</title>
     <body class="general-page">
         <style>
-            @font-face { font-family: Mirage; src: url('/fonts/Mirage Final.ttf'); }
-            @font-face { font-family: Alike Angular; src: url('/fonts/AlikeAngular-Regular.ttf'); }
+            @font-face { font-family: Mirage; src: url('fonts/Mirage Final.ttf'); }
+            @font-face { font-family: Alike Angular; src: url('fonts/AlikeAngular-Regular.ttf'); }
             .center-image { display: block; margin-left: auto; margin-right: auto; width: 50%; }
             .center-text {
             text-align: center;
@@ -107,7 +107,7 @@
         <h1 class="logo-font">SwampSnail.Art</h1>
         <div class="container">
             <div>
-            <img height="120px"src="/tinymascot.png">
+            <img height="120px"src="tinymascot.png">
             </div>
             <div style="font-family: 'Alike Angular';"class="speech-bubble" >            
             <p>Commissions are currently <a style="color:green" href="https://forms.gle/M7WVisbvjwGJyTWY6">OPEN!</a></p>
@@ -123,16 +123,16 @@
         </p>
         <div class="row">
             <div class="column" id="imgDiv">
-                <a href="2DArt.html"><img id="imgRegular" height="150px"src="/2dArtIcon_Idle.png"/><img height="150px" id="imgHover" src="/2dArtIcon_Hover.png"/></a>
+                <a href="2DArt.html"><img id="imgRegular" height="150px"src="2dArtIcon_Idle.png"/><img height="150px" id="imgHover" src="2dArtIcon_Hover.png"/></a>
                 <p style="text-align: center; width:150px; font-family: 'Alike Angular'; font-size: 16px;">2D Art</p>
             </div>
             <div class="column" id="imgDiv">
-                <a href="3DArt.html"><img id="imgRegular" height="150px"src="/3dArtIcon_Idle.png"/><img height="150px" id="imgHover" src="/3dArtIcon_Hover.png"/></a>
+                <a href="3DArt.html"><img id="imgRegular" height="150px"src="3dArtIcon_Idle.png"/><img height="150px" id="imgHover" src="3dArtIcon_Hover.png"/></a>
                 <p style="text-align: center; width:150px; font-family: 'Alike Angular'; font-size: 16px;">3D Art</p>
             </div>
             
             <div class="column" id="imgDiv">
-                <a href="Storyboards.html"><img id="imgRegular" height="150px"src="/StoryboardIcon_Idle.png"/><img height="150px" id="imgHover" src="/StoryboardIcon_Hover.png"/></a>
+                <a href="Storyboards.html"><img id="imgRegular" height="150px"src="StoryboardIcon_Idle.png"/><img height="150px" id="imgHover" src="StoryboardIcon_Hover.png"/></a>
                 <p style="text-align: center; width:150px; font-family: 'Alike Angular'; font-size: 16px;">Storyboards</p>
             </div>
         </div>
@@ -147,6 +147,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
