--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>SwampSnail.Art</title>
     <body class="general-page">
         <style>
-            @font-face { font-family: Mirage; src: url('./fonts/Mirage Final.ttf'); }
-            @font-face { font-family: Alike Angular; src: url('./fonts/AlikeAngular-Regular.ttf'); }
+            @font-face { font-family: Mirage; src: url('../fonts/Mirage Final.ttf'); }
+            @font-face { font-family: Alike Angular; src: url('../fonts/AlikeAngular-Regular.ttf'); }
             .center-image { display: block; margin-left: auto; margin-right: auto; width: 50%; }
             .center-text {
             text-align: center;
@@ -147,6 +147,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
