--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>SwampSnail.Art</title>
     <body class="general-page">
         <style>
-            @font-face { font-family: 'Mirage'; src: url('./fonts/Miragefinal.ttf'); format('truetype'); }
+            @font-face { font-family: 'Mirage'; src: url('./fonts/MirageGothic.ttf'); format('truetype'); }
             @font-face { font-family: 'Alike Angular'; src: url('./fonts/AlikeAngular-Regular.ttf'); format('truetype');}
             .center-image { display: block; margin-left: auto; margin-right: auto; width: 50%; }
             .center-text {
@@ -147,6 +147,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
