--- a/3dArt.html
+++ b/3dArt.html
@@ -16,7 +16,7 @@
             padding: -20px"">Home</p></a>
     <body id="general-page" style="overflow: auto; background-size: cover; background-repeat: no-repeat;">
         <style>
-            @font-face { font-family: Mirage; src: url('fonts/Mirage Final.ttf'); }
+            @font-face { font-family: Mirage; src: url('fonts/MirageGothic.ttf'); }
             @font-face { font-family: Alike Angular; src: url('fonts/AlikeAngular-Regular.ttf'); }
             div.desc {
             padding: 15px;
@@ -114,4 +114,5 @@
         <i>~*~* I coded this website myself in html! *~*~</i>
         </div>
     </footer>
+
 </html>
