--- a/AboutMe.html
+++ b/AboutMe.html
@@ -3,7 +3,7 @@
     <title>About Me</title>
    <body class="general-page">
         <style>
-            @font-face { font-family: Mirage; src: url('fonts/Mirage Final.ttf'); }
+            @font-face { font-family: Mirage; src: url('fonts/MirageGothic.ttf'); }
             @font-face { font-family: Alike Angular; src: url('fonts/AlikeAngular-Regular.ttf'); }
             .center-image { display: block; margin-left: auto; margin-right: auto; width: 50%; }
             .center-text {
@@ -115,4 +115,5 @@
         </div>
     </footer>
     
+
 </html>
