--- a/Storyboards.html
+++ b/Storyboards.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="height: 100%">
+<html >
     
     <title>Storyboards</title>
     <header class="logo-font"style= "padding: 20px">
@@ -101,3 +101,4 @@
     </footer>
 
 </html>
+
