--- a/Storyboards.html
+++ b/Storyboards.html
@@ -64,8 +64,7 @@
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
         </style>
-        <div id="wrapper" style="overflow-y:scroll; scrollbar-color: rgb(110, 138, 110) rgb(212, 234, 178);
-  scrollbar-width: thin; scrollbar-arrow-color:  rgb(212, 234, 178);">
+        <div id="wrapper" >
             <div class="row">
                 <div class="column">
                     <a target="_blank" href="https://drive.google.com/file/d/18_N5OUXn5Kil-LeMQAFx3DfFBYY95pSB/view?usp=sharing">
@@ -101,4 +100,5 @@
     </footer>
 
 </html>
+
 
