--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
         </p>
         <div class="row">
             <div class="column" id="imgDiv">
-                <a href="./2DArt.html"><img id="imgRegular" height="150px"src="2dArtIcon_Idle.png"/><img height="150px" id="imgHover" src="2dArtIcon_Hover.png"/></a>
+                <a href="2dArt.html"><img id="imgRegular" height="150px"src="2dArtIcon_Idle.png"/><img height="150px" id="imgHover" src="2dArtIcon_Hover.png"/></a>
                 <p style="text-align: center; width:150px; font-family: 'Alike Angular'; font-size: 16px;">2D Art</p>
             </div>
             <div class="column" id="imgDiv">
-                <a href="./3DArt.html"><img id="imgRegular" height="150px"src="3dArtIcon_Idle.png"/><img height="150px" id="imgHover" src="3dArtIcon_Hover.png"/></a>
+                <a href="3dArt.html"><img id="imgRegular" height="150px"src="3dArtIcon_Idle.png"/><img height="150px" id="imgHover" src="3dArtIcon_Hover.png"/></a>
                 <p style="text-align: center; width:150px; font-family: 'Alike Angular'; font-size: 16px;">3D Art</p>
             </div>
             
@@ -147,6 +147,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
