--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html>
    
     <title>SwampSnail.Art</title>
+	<header>
+		<meta name="viewport" content="width=960px">
+	</header>
     <body class="general-page">
         <style>
             @font-face { font-family: 'Mirage'; src: url('./fonts/MirageGothic.ttf'); format('truetype'); }
@@ -147,6 +150,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
