--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
             }
 
             .general-page{
-            background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110))
+            background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
+			background-position: center;
+  			background-repeat: no-repeat;
+  			background-size: cover;
             }
 
             #imgHover{
@@ -150,6 +153,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
