--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 			background-position: center;
   			background-repeat: no-repeat;
   			background-size: cover;
+			height: 100%;
             }
 
             #imgHover{
@@ -153,6 +154,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
