--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html>
    
     <title>SwampSnail.Art</title>
-	<header class="general-page">
+	<header>
 		<meta name="viewport" content="width=960px">
 	</header>
-    <body >
+    <body class="general-page">
         <style>
             @font-face { font-family: 'Mirage'; src: url('./fonts/MirageGothic.ttf'); format('truetype'); }
             @font-face { font-family: 'Alike Angular'; src: url('./fonts/AlikeAngular-Regular.ttf'); format('truetype');}
@@ -154,6 +154,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
