--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             
             }
 
-
+			body{height:100vh;
+			box-sizing:border-box;
+			overflow-y:hidden;} 
             .container {
             display: flex;
             align-items: center;
@@ -154,6 +156,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
