--- a/Storyboards.html
+++ b/Storyboards.html
@@ -28,7 +28,9 @@
              box-sizing: border-box;
              }
 
-                
+            body{height:100vh;
+            box-sizing:border-box;
+            overflow-y:hidden;}     
 
             .logo-font {
             font-family: 'Mirage'; font-size: 100px; text-align: center; background-image: linear-gradient(black, green); color: transparent; background-clip: text;
@@ -100,5 +102,6 @@
     </footer>
 
 </html>
+
 
 
