--- a/3dArt.html
+++ b/3dArt.html
@@ -34,9 +34,9 @@
             
             }
 
-            body{height:100vh;
-            box-sizing:border-box;
-            overflow-y:hidden;} 
+            #body{height:100vh;
+           # box-sizing:border-box;
+            #overflow-y:hidden;} 
             
             /* Three image containers (use 25% for four, and 50% for two, etc) */
             .column {
@@ -118,4 +118,5 @@
     </footer>
 
 </html>
+
 
