--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
 
             .general-page{
             background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
-			background-position: center;
-  			background-repeat: no-repeat;
-  			background-size: cover;
+			width: 100vw;
+			height: 100vh;
+			background-size: cover;
+			background-position: center, center;
 			
             }
 
@@ -154,6 +155,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
