--- a/Storyboards.html
+++ b/Storyboards.html
@@ -28,9 +28,7 @@
              box-sizing: border-box;
              }
 
-            body{height:100vh;
-            box-sizing:border-box;
-            overflow-y:hidden;}     
+            
 
             .logo-font {
             font-family: 'Mirage'; font-size: 100px; text-align: center; background-image: linear-gradient(black, green); color: transparent; background-clip: text;
@@ -60,9 +58,11 @@
             height: 400px;
             }
             #general-page{
-            background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
-            background-repeat:no-repeat;
-            background-size: cover;
+             background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
+			width: 100vw;
+			height: 100vh;
+			background-size: cover;
+			background-position: center, center;
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
         </style>
@@ -102,6 +102,7 @@
     </footer>
 
 </html>
+
 
 
 
