--- a/Storyboards.html
+++ b/Storyboards.html
@@ -14,7 +14,7 @@
     <a href="index.html"><p style="font-family: 'Alike Angular';font-size: 20px;
             text-align: center;
             padding: -20px">Home</p></a>
-    <body id="general-page" style="overflow: auto; background-size: cover; background-repeat: no-repeat;">
+    <body id="general-page">
         <style>
             @font-face { font-family: Mirage; src: url('fonts/MirageGothic.ttf'); }
             @font-face { font-family: Alike Angular; src: url('fonts/AlikeAngular-Regular.ttf'); }
@@ -102,6 +102,7 @@
     </footer>
 
 </html>
+
 
 
 
