--- a/Storyboards.html
+++ b/Storyboards.html
@@ -96,12 +96,13 @@
     </body>
     <footer>
        
-        <div style="text-align: center; margin-top: 20px;">
+        <div style="padding: 20px; text-align: center;">
         <i>~*~* I coded this website myself in html! *~*~</i>
         </div>
     </footer>
 
 </html>
+
 
 
 
