--- a/Storyboards.html
+++ b/Storyboards.html
@@ -10,7 +10,7 @@
             padding:5px; width: 500px; ">Some samples of storyboard projects, mostly done in storyboard pro and /or davinci resolve. See my <a href="AbsHall_CV.pdf" download>CV</a> for more of my professional storyboard credits.</p>
             <p style="font-family: 'Alike Angular';font-size: 14px;
             text-align: center;
-            padding: 5x">Click on thumbnails for fullscreen!</p>
+            padding: 5px">Click on thumbnails for fullscreen!</p>
     <a href="index.html"><p style="font-family: 'Alike Angular';font-size: 20px;
             text-align: center;
             padding: -20px">Home</p></a>
@@ -61,7 +61,7 @@
             background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
 			width: 100vw;
 			height: 100vh;
-			background-size: contain;
+			background-size: cover;
 			background-position: center, center;
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
@@ -102,6 +102,7 @@
     </footer>
 
 </html>
+
 
 
 
