--- a/Storyboards.html
+++ b/Storyboards.html
@@ -7,7 +7,7 @@
     </header>
     <p style="font-family: 'Alike Angular';font-size: 14px;
             text-align: center;
-            padding:5px; width: 500px; margin 0 auto; ">Some samples of storyboard projects, mostly done in storyboard pro and /or davinci resolve. See my <a href="AbsHall_CV.pdf" download>CV</a> for more of my professional storyboard credits.</p>
+            padding:5px; width: 500px; margin: 0 auto; ">Some samples of storyboard projects, mostly done in storyboard pro and /or davinci resolve. See my <a href="AbsHall_CV.pdf" download>CV</a> for more of my professional storyboard credits.</p>
             <p style="font-family: 'Alike Angular';font-size: 14px;
             text-align: center;
             padding: 5px">Click on thumbnails for fullscreen!</p>
@@ -102,6 +102,7 @@
     </footer>
 
 </html>
+
 
 
 
