--- a/Storyboards.html
+++ b/Storyboards.html
@@ -57,7 +57,7 @@
             border-radius: 5%;
             height: 400px;
             }
-            #general-page{
+            general-page{
             background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
 			width: 100vw;
 			height: 100vh;
@@ -102,6 +102,7 @@
     </footer>
 
 </html>
+
 
 
 
