--- a/Storyboards.html
+++ b/Storyboards.html
@@ -61,7 +61,7 @@
             background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
 			width: 100vw;
 			height: 100vh;
-			background-size: cover;
+			background-size: contain;
 			background-position: center, center;
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
@@ -102,6 +102,7 @@
     </footer>
 
 </html>
+
 
 
 
