--- a/2dArt.html
+++ b/2dArt.html
@@ -62,7 +62,7 @@
             background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
 			width: 100vw;
 			height: 100vh;
-			background-size: contain;
+			background-size: cover;
 			background-position: center, center;
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
@@ -159,6 +159,7 @@
     </footer>
 
 </html>
+
 
 
 
