--- a/3dArt.html
+++ b/3dArt.html
@@ -62,8 +62,8 @@
             .general-page{
             background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
 			width: 100vw;
-			height: 100vh;
-			background-size: contain;
+			height: 200vh;
+			background-size: cover;
 			background-position: center, center;
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
@@ -120,6 +120,7 @@
     </footer>
 
 </html>
+
 
 
 
