--- a/AboutMe.html
+++ b/AboutMe.html
@@ -53,8 +53,8 @@
             .general-page{
             background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
 			width: 100vw;
-			height: 100vh;
-			background-size: contain;
+			height: 200vh;
+			background-size: cover;
 			background-position: center, center;
             }
 
@@ -119,6 +119,7 @@
     
 
 </html>
+
 
 
 
