--- a/Storyboards.html
+++ b/Storyboards.html
@@ -60,8 +60,8 @@
             .general-page{
             background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
 			width: 100vw;
-			height: 100vh;
-			background-size: contain;
+			height: 200vh;
+			background-size: cover;
 			background-position: center, center;
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
@@ -103,6 +103,7 @@
     
 
 </html>
+
 
 
 
