--- a/index.html
+++ b/index.html
@@ -75,8 +75,13 @@
             width: 500px;
             margin: 0 auto;
             background-color: rgb(212, 234, 178);
-            padding: 10px;
-            border-radius: 5%;
+            border: 50px solid transparent;
+    		border-image: url(laceborder.png) 40 round;
+    		background-clip: padding-box;
+    		padding: 20px;
+            /*border-radius: 5%;*/
+			
+			
             }
 
             #commission_box {
@@ -155,6 +160,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
