--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     		border-image: url(laceborder.png) 40 round;
     		background-clip: padding-box;
     		padding: 20px;
+			border-image-repeat: repeat;
             /*border-radius: 5%;*/
 			
 			
@@ -160,6 +161,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
