--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     		border-image: url(laceborder.png) 40 round;
     		background-clip: padding-box;
     		padding: 20px;
-			/*border-image-slice: 30;*/
+			border-image-slice: 34;
 			border-image-repeat: repeat;
             /*border-radius: 5%;*/
 			
@@ -162,6 +162,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
