--- a/2dArt.html
+++ b/2dArt.html
@@ -67,10 +67,10 @@
             }
             .general-page{
             background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
-			width: 100%;
-			height: 200%;
+			width: 100vh;
+			height: 200vh;
 			background-size: cover;
-			background-position: center, center;
+			
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
         </style>
@@ -166,6 +166,7 @@
     </footer>
 
 </html>
+
 
 
 
