--- a/2dArt.html
+++ b/2dArt.html
@@ -70,6 +70,7 @@
 			width: 100vh;
 			height: 200vh;
 			background-size: cover;
+			background-repeat: no-repeat;
 			
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
@@ -166,6 +167,7 @@
     </footer>
 
 </html>
+
 
 
 
