--- a/2dArt.html
+++ b/2dArt.html
@@ -71,6 +71,8 @@
 			height: 200vh;
 			background-size: cover;
 			background-repeat: no-repeat;
+			background-position: center center;
+			 min-height: 300px;
 			
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
@@ -167,6 +169,7 @@
     </footer>
 
 </html>
+
 
 
 
