--- a/2dArt.html
+++ b/2dArt.html
@@ -66,7 +66,7 @@
             }
             }
             .general-page{
-            background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
+            background: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
 			width: 100vh;
 			height: 200vh;
 			background-size: cover;
@@ -169,6 +169,7 @@
     </footer>
 
 </html>
+
 
 
 
