--- a/2dArt.html
+++ b/2dArt.html
@@ -66,13 +66,11 @@
             }
             }
             .general-page{
-            background: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
+            background: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110)) no-repeat center;
 			width: 100vh;
 			height: 200vh;
 			background-size: cover;
-			background-repeat: no-repeat;
-			background-position: center center;
-			 min-height: 300px;
+			min-height: 300px;
 			
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
@@ -169,6 +167,7 @@
     </footer>
 
 </html>
+
 
 
 
