--- a/3dArt.html
+++ b/3dArt.html
@@ -60,7 +60,7 @@
             border-radius: 5%;
             }
             .general-page{
-            background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
+            background: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
 			width: 100vw;
 			height: 200vh;
 			background-size: cover;
@@ -120,6 +120,7 @@
     </footer>
 
 </html>
+
 
 
 
