--- a/2dArt.html
+++ b/2dArt.html
@@ -24,9 +24,9 @@
             font-family: 'Alike Angular';
             }
 
-             /* {
+             * {
              box-sizing: border-box;
-             }*\
+             }
            
                 
              .logo-font {
@@ -66,10 +66,10 @@
             }
             }
             .general-page{
-            background: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110)) no-repeat center;
-			width: 100vh;
+			
+  			background: linear-gradient(to top, rgb(165, 203, 158), rgb(110, 138, 110));
+			width: 100%;
 			height: 200vh;
-			background-size: cover;
 			min-height: 300px;
 			
             }
@@ -167,6 +167,7 @@
     </footer>
 
 </html>
+
 
 
 
