--- a/2dArt.html
+++ b/2dArt.html
@@ -14,7 +14,7 @@
     <a href="index.html"><p style="font-family: 'Alike Angular';font-size: 20px;
             text-align: center;
             padding: -20px"">Home</p></a>
-    <body class="general-page" >
+    <body id="general-page" >
         <style>
             @font-face { font-family: Mirage; src: url('fonts/MirageGothic.ttf'); }
             @font-face { font-family: Alike Angular; src: url('fonts/AlikeAngular-Regular.ttf'); }
@@ -167,6 +167,7 @@
     </footer>
 
 </html>
+
 
 
 
