--- a/2dArt.html
+++ b/2dArt.html
@@ -65,7 +65,7 @@
 			
             }
             }
-            .general-page{
+            #general-page{
 			
   			background: linear-gradient(to top, rgb(165, 203, 158), rgb(110, 138, 110));
 			width: 100%;
@@ -167,6 +167,7 @@
     </footer>
 
 </html>
+
 
 
 
