--- a/2dArt.html
+++ b/2dArt.html
@@ -14,7 +14,7 @@
     <a href="index.html"><p style="font-family: 'Alike Angular';font-size: 20px;
             text-align: center;
             padding: -20px"">Home</p></a>
-    <body id="general-page" >
+    <body class="general-page" >
         <style>
             @font-face { font-family: Mirage; src: url('fonts/MirageGothic.ttf'); }
             @font-face { font-family: Alike Angular; src: url('fonts/AlikeAngular-Regular.ttf'); }
@@ -65,7 +65,7 @@
 			
             }
             }
-            #general-page{
+            .general-page{
 			
   			background: linear-gradient(to top, rgb(165, 203, 158), rgb(110, 138, 110));
 			width: 100%;
@@ -167,6 +167,7 @@
     </footer>
 
 </html>
+
 
 
 
