--- a/2dArt.html
+++ b/2dArt.html
@@ -67,10 +67,11 @@
             }
             .general-page{
 			
-  			background: linear-gradient(to top, rgb(165, 203, 158), rgb(110, 138, 110));
-			width: 100%;
+  			background-color: linear-gradient(to top, rgb(165, 203, 158), rgb(110, 138, 110));
+			width: 100vh;
 			height: 200vh;
-			min-height: 300px;
+			background-position: center center; /* Centers the image both horizontally and vertically */
+  			background-size: cover;
 			
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
@@ -167,6 +168,7 @@
     </footer>
 
 </html>
+
 
 
 
