--- a/2dArt.html
+++ b/2dArt.html
@@ -67,7 +67,7 @@
             }
             .general-page{
 			
-  			background-color: linear-gradient(to top, rgb(165, 203, 158), rgb(110, 138, 110));
+  			background: linear-gradient(to top, rgb(165, 203, 158), rgb(110, 138, 110));
 			width: 100vh;
 			height: 200vh;
 			background-position: center center; /* Centers the image both horizontally and vertically */
@@ -168,6 +168,7 @@
     </footer>
 
 </html>
+
 
 
 
