--- a/2dArt.html
+++ b/2dArt.html
@@ -51,7 +51,8 @@
             }
             #wrapper {
             width: 700px;
-            margin: 0 auto;
+            /*margin: 0 auto;*/
+			justify-contents: center
             background-color: rgb(212, 234, 178);
             height: 500px;
             border: 34px solid transparent;
@@ -168,6 +169,7 @@
     </footer>
 
 </html>
+
 
 
 
