--- a/2dArt.html
+++ b/2dArt.html
@@ -51,8 +51,8 @@
             }
             #wrapper {
             width: 700px;
-            /*margin: 0 auto;*/
-			justify-contents: center
+            margin: 0 auto
+			
             background-color: rgb(212, 234, 178);
             height: 500px;
             border: 34px solid transparent;
@@ -169,6 +169,7 @@
     </footer>
 
 </html>
+
 
 
 
