--- a/2dArt.html
+++ b/2dArt.html
@@ -51,7 +51,7 @@
             }
             #wrapper {
             width: 700px;
-            margin: 0 auto
+            margin: 0 auto;
 			
             background-color: rgb(212, 234, 178);
             height: 500px;
@@ -169,6 +169,7 @@
     </footer>
 
 </html>
+
 
 
 
