--- a/2dArt.html
+++ b/2dArt.html
@@ -67,6 +67,9 @@
             }
             }
             .general-page{
+
+			background: linear-gradient(to top, rgb(165, 203, 158), rgb(110, 138, 110));
+    		background-attachment: fixed;
 			
   			background: linear-gradient(to top, rgb(165, 203, 158), rgb(110, 138, 110));
 			width: 100vh;
@@ -169,6 +172,7 @@
     </footer>
 
 </html>
+
 
 
 
