--- a/2dArt.html
+++ b/2dArt.html
@@ -76,6 +76,7 @@
 			height: 200vh;
 			background-position: center center; /* Centers the image both horizontally and vertically */
   			background-size: cover;
+			position: relative; 
 			
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
@@ -172,6 +173,7 @@
     </footer>
 
 </html>
+
 
 
 
