--- a/2dArt.html
+++ b/2dArt.html
@@ -68,9 +68,11 @@
             }
             .general-page{
 
-			background: linear-gradient(to top, rgb(165, 203, 158), rgb(110, 138, 110));
-    		background-attachment: fixed;
-			
+			background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
+			width: 100vw;
+			height: 150vh;
+			background-size: cover;
+			background-position: center, center;
 			
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
@@ -167,6 +169,7 @@
     </footer>
 
 </html>
+
 
 
 
