--- a/2dArt.html
+++ b/2dArt.html
@@ -26,6 +26,11 @@
 
              * {
              box-sizing: border-box;
+			background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
+			width: 100vw;
+			height: 150vh;
+			background-size: cover;
+			background-position: center, center;
              }
            
                 
@@ -169,6 +174,7 @@
     </footer>
 
 </html>
+
 
 
 
