--- a/2dArt.html
+++ b/2dArt.html
@@ -73,6 +73,8 @@
 			height: 150vh;
 			background-size: cover;
 			background-position: center, center;
+			overflow:auto;
+			margin:auto;
 			
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
@@ -169,6 +171,7 @@
     </footer>
 
 </html>
+
 
 
 
