--- a/2dArt.html
+++ b/2dArt.html
@@ -68,13 +68,11 @@
             }
             .general-page{
 
-			background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
+			background: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
 			width: 100vw;
-			height: 150vh;
+			height: 200vh;
 			background-size: cover;
 			background-position: center, center;
-			overflow:auto;
-			margin:auto;
 			
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
@@ -171,6 +169,7 @@
     </footer>
 
 </html>
+
 
 
 
