--- a/2dArt.html
+++ b/2dArt.html
@@ -14,7 +14,7 @@
     <a href="index.html"><p style="font-family: 'Alike Angular';font-size: 20px;
             text-align: center;
             padding: -20px"">Home</p></a>
-    <body class="general-page" >
+    <body class="general-page">
         <style>
             @font-face { font-family: Mirage; src: url('fonts/MirageGothic.ttf'); }
             @font-face { font-family: Alike Angular; src: url('fonts/AlikeAngular-Regular.ttf'); }
@@ -68,7 +68,7 @@
             }
             .general-page{
 
-			background: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110)); !important
+			background-color: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110))!important;
 			width: 100vw;
 			height: 200vh;
 			background-size: cover;
@@ -169,6 +169,7 @@
     </footer>
 
 </html>
+
 
 
 
