--- a/2dArt.html
+++ b/2dArt.html
@@ -68,7 +68,7 @@
             
             .general-page{
 
-			background-color: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110)) !important;
+			background: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110)) !important;
 			width: 100vw;
 			height: 200vh;
 			background-size: cover;
@@ -169,6 +169,7 @@
     </footer>
 
 </html>
+
 
 
 
