--- a/2dArt.html
+++ b/2dArt.html
@@ -16,6 +16,9 @@
             padding: -20px"">Home</p></a>
     <body class="general-page">
         <style>
+			html {
+    		height: 100%;
+			}
             @font-face { font-family: Mirage; src: url('fonts/MirageGothic.ttf'); }
             @font-face { font-family: Alike Angular; src: url('fonts/AlikeAngular-Regular.ttf'); }
             div.desc {
@@ -169,6 +172,7 @@
     </footer>
 
 </html>
+
 
 
 
