--- a/3dArt.html
+++ b/3dArt.html
@@ -68,11 +68,12 @@
 			border-image-repeat: repeat;
             }
             .general-page{
-            background: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110));
+            background: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110))!important;
 			width: 100vw;
-			height: 200vh;
+			height: 250vh;
 			background-size: cover;
 			background-position: center, center;
+			background-repeat: no-repeat;
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
         </style>
@@ -128,6 +129,7 @@
     </footer>
 
 </html>
+
 
 
 
