--- a/3dArt.html
+++ b/3dArt.html
@@ -69,9 +69,9 @@
             background: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110))!important;
 			width: 100vw;
 			height: 250vh;
-			background-size: cover !important;
+			background-size: cover;
 			background-position: center, center;
-			background-repeat: no-repeat !important;
+			background-repeat: no-repeat;
             }
             .center-image { display: block; margin-left: auto; margin-right: auto; }
         </style>
@@ -127,6 +127,7 @@
     </footer>
 
 </html>
+
 
 
 
