--- a/3dArt.html
+++ b/3dArt.html
@@ -67,6 +67,7 @@
             }
             .general-page{
             background: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110))!important;
+			margin: 8px;
 			width: 100vw;
 			height: 200vh;
 			background-size: cover;
@@ -127,6 +128,7 @@
     </footer>
 
 </html>
+
 
 
 
