--- a/3dArt.html
+++ b/3dArt.html
@@ -66,7 +66,7 @@
 			border-image-repeat: repeat;
             }
             .general-page{
-            background: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110))!important;
+            background-image: linear-gradient(rgb(165, 203, 158), rgb(110, 138, 110))!important;
 			margin: 8px;
 			width: 100vw;
 			height: 200vh;
@@ -128,6 +128,7 @@
     </footer>
 
 </html>
+
 
 
 
